<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <Button
        android:id="@+id/btn_webbrowser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_webbrowser_title"
        android:onClick="onClickWebBrowser" />
    <Button
        android:id="@+id/btn_makecalls"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/btn_makecalls_title"
        android:onClick="onClickMakeCalls"/>
    <Button
        android:id="@+id/btn_showMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_showmap_title"
        android:onClick="onClickShowMap"/>
   <Button 
       android:id="@+id/btn_launchMyBrowser"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="Launch My Browser"
       android:onClick="onClickLaunchMyBrowser"/>
   
    
</LinearLayout>